--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
 <p>The schematic diagram below details the various stages of the exceRpt pipeline including <strong>pre-processing</strong> of the raw reads, <strong>contaminant removal</strong>, alignment to the <strong>endogenous</strong> (human/mouse) genome and annotated transcriptome, and finally alignment to a large number of <strong>exogenous</strong> sequences for detection of foreign nucleic acids.</p>
 
-<p><img src="https://dl.dropboxusercontent.com/u/2696693/exceRpt_workflow.png" alt="exceRpt workflow diagram"></p>
+<!--<p><img src="https://dl.dropboxusercontent.com/u/2696693/exceRpt_workflow.png" alt="exceRpt workflow diagram"></p>-->
+<p><img src="http://genboree.org/theCommons/attachments/6315/exceRpt_4thGen_Workflow.png" alt="exceRpt workflow diagram"></p>
+
 
 <hr>
 
